Change header and nav design

--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -28,8 +28,8 @@
             </div>
 
             <div class="headline" id="gravity-page-headline">
-                <div>Newton's 
-                    <div class="headline-highlight">Apple</div>
+                <div>
+                    <div class="headline-highlight">Newton's Apple</div>
                 </div>
             </div>
 
