--- a/Pages/history.html
+++ b/Pages/history.html
@@ -28,8 +28,8 @@
             </div>
 
             <div class="headline" id="history-page-headline">
-                <div>History Of 
-                    <div class="headline-highlight">Physics</div>
+                <div>
+                    <div class="headline-highlight">Physics History</div>
                 </div>
             </div>
 
