--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -26,8 +26,8 @@
             </div>
 
             <div class="headline" id="quiz-page-headline">
-                <div>Test Your 
-                    <div class="headline-highlight">Knowledge</div>
+                <div>
+                    <div class="headline-highlight">Physics Quiz</div>
                 </div>
             </div>
 
