--- a/Pages/resonance.html
+++ b/Pages/resonance.html
@@ -28,8 +28,8 @@
             </div>
 
             <div class="headline" id="keyboard-page-headline">
-                <div>Resonant 
-                    <div class="headline-highlight">Frequency</div>
+                <div>
+                    <div class="headline-highlight">Resonant Frequency</div>
                 </div>
             </div>
 
