Rename all Resonance pages to Pendulum

--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -12,7 +12,7 @@
         <div class="overlay-content">
             <a href="../index.html">Home</a>
             <a href="./history.html">History</a>
-            <a href="./resonance.html">Resonant Frequency</a>
+            <a href="./pendulum.html">Pendulum</a>
             <a href="./quiz.html">Quiz</a>
         </div>
     </nav>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="nav-box" id="nav-box-right">
-                <a href="./resonance.html" class="highlight-text">Resonance</a>
+                <a href="./pendulum.html" class="highlight-text">Pendulum</a>
                 <a href="./quiz.html" class="highlight-text">Quiz</a>
             </div>
         </header>
