--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -11,9 +11,9 @@
     <nav id="myNav" class="overlay">
         <div class="overlay-content">
             <a href="../index.html">Home</a>
-            <a href="./history.html">Physics History</a>
-            <a href="./gravity.html">Newton's Apple</a>
-            <a href="./resonance.html">Resonant Frequency</a>
+            <a href="./history.html">History</a>
+            <a href="./gravity.html">Gravity</a>
+            <a href="./pendulum.html">Pendulum</a>
         </div>
     </nav>
 
@@ -33,7 +33,7 @@
 
             <div class="nav-box" id="nav-box-right">
                 <a href="./gravity.html" class="highlight-text">Gravity</a>
-                <a href="./resonance.html" class="highlight-text">Resonance</a>
+                <a href="./pendulum.html" class="highlight-text">Pendulum</a>
             </div>
         </header>
 
