--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <nav id="myNav" class="overlay">
         <div class="overlay-content">
-            <a href="./Pages/history.html">Physics History</a>
-            <a href="./Pages/gravity.html">Newton's Apple</a>
-            <a href="./Pages/resonance.html">Resonant Frequency</a>
-            <a href="./Pages/quiz.html">Physics Quiz</a>
+            <a href="./Pages/history.html">History</a>
+            <a href="./Pages/gravity.html">Gravity</a>
+            <a href="./Pages/pendulum.html">Pendulum</a>
+            <a href="./Pages/quiz.html">Quiz</a>
         </div>
     </nav>
 
@@ -45,7 +45,7 @@
             </div>
 
             <div class="nav-box" id="nav-box-right">
-                <a href="./Pages/resonance.html" class="highlight-text">Resonance</a>
+                <a href="./Pages/pendulum.html" class="highlight-text">Pendulum</a>
                 <a href="./Pages/quiz.html" class="highlight-text">Quiz</a>
             </div>
         </header>
