--- a/Pages/history.html
+++ b/Pages/history.html
@@ -10,9 +10,9 @@
 <body>
     <nav id="myNav" class="overlay">
         <div class="overlay-content">
-            <a href="../index.html">HOME</a>
-            <a href="./gravity.html">Newton's Apple</a>
-            <a href="./resonance.html">Resonant Frequency</a>
+            <a href="../index.html">Home</a>
+            <a href="./gravity.html">Gravity</a>
+            <a href="./pendulum.html">Pendulum</a>
             <a href="./quiz.html">Quiz</a>
         </div>
     </nav>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="nav-box" id="nav-box-right">
-                <a href="./resonance.html" class="highlight-text">Resonance</a>
+                <a href="./pendulum.html" class="highlight-text">Pendulum</a>
                 <a href="./quiz.html" class="highlight-text">Quiz</a>
             </div>
         </header>
