--- a/Pages/pendulum.html
+++ b/Pages/pendulum.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles/style.css">
-    <script defer src="../Scripts/resonance.js"></script>
+    <script defer src="../Scripts/pendulum.js"></script>
     <title>Resonant Frequency</title>
 </head>
 <body>
