--- a/Pages/history.html
+++ b/Pages/history.html
@@ -46,14 +46,14 @@
         <section class="grid-item-main" id="history-page-main">
             <div id="ruler"><div></div></div>
 
-            <div class="ruler-dots" id="dot1"><div></div></div>
-            <div class="ruler-dots" id="dot2"><div></div></div>
-            <div class="ruler-dots" id="dot3"><div></div></div>
-            <div class="ruler-dots" id="dot4"><div></div></div>
-            <div class="ruler-dots" id="dot5"><div></div></div>
-            <div class="ruler-dots" id="dot6"><div></div></div>
-            <div class="ruler-dots" id="dot7"><div></div></div>
-            <div class="ruler-dots" id="dot8"><div></div></div>
+            <div class="ruler-dot" id="ruler-dot-1"><div></div></div>
+            <div class="ruler-dot" id="ruler-dot-2"><div></div></div>
+            <div class="ruler-dot" id="ruler-dot-3"><div></div></div>
+            <div class="ruler-dot" id="ruler-dot-4"><div></div></div>
+            <div class="ruler-dot" id="ruler-dot-5"><div></div></div>
+            <div class="ruler-dot" id="ruler-dot-6"><div></div></div>
+            <div class="ruler-dot" id="ruler-dot-7"><div></div></div>
+            <div class="ruler-dot" id="ruler-dot-8"><div></div></div>
 
             
             <div class="text-background" id="text-background1"><div></div></div>
@@ -66,76 +66,109 @@
             <div class="text-background" id="text-background8"><div></div></div>
             
 
-            <div id="date-wrapper">
-                <h3 class="dates" id="date-1922">1922<br>TITLE</h3>
-                <h3 class="dates" id="date-1952">1952<br>TITLE</h3>
-                <h3 class="dates" id="date-1956">1956<br>TITLE</h3>
-                <h3 class="dates" id="date-1964">1964<br>TITLE</h3>
-                <h3 class="dates" id="date-1971">1971<br>TITLE</h3>
-                <h3 class="dates" id="date-1980">1980<br>TITLE</h3>
-                <h3 class="dates" id="date-1991">1991<br>TITLE</h3>
-                <h3 class="dates" id="date-1994">1994<br>TITLE</h3>
+            <div id="timeline-item-wrapper">
+                <h3 class="timeline-item" id="timeline-item-1">
+                    <div class="timeline-date">1687</div>
+                    <div class="timeline-date-title">Laws of Motion</div>
+                </h3>
+                <h3 class="timeline-item" id="timeline-item-2">
+                    <div class="timeline-date">1864</div>
+                    <div class="timeline-date-title">Maxwell’s Equations</div>
+                </h3>
+                <h3 class="timeline-item" id="timeline-item-3">
+                    <div class="timeline-date">1897</div>
+                    <div class="timeline-date-title">Discovery of the Electron</div>
+                </h3>
+                <h3 class="timeline-item" id="timeline-item-4">
+                    <div class="timeline-date">1900</div>
+                    <div class="timeline-date-title">Quantum Theory</div>
+                </h3>
+                <h3 class="timeline-item" id="timeline-item-5">
+                    <div class="timeline-date">1905</div>
+                    <div class="timeline-date-title">Theory of Relativity</div>
+                </h3>
+                <h3 class="timeline-item" id="timeline-item-6">
+                    <div class="timeline-date">1911</div>
+                    <div class="timeline-date-title">Atomic Nucleus</div>
+                </h3>
+                <h3 class="timeline-item" id="timeline-item-7">
+                    <div class="timeline-date">1925</div>
+                    <div class="timeline-date-title">Modern Quantum Mechanics</div>
+                </h3>
+                <h3 class="timeline-item" id="timeline-item-8">
+                    <div class="timeline-date">2012</div>
+                    <div class="timeline-date-title">Higgs Boson</div>
+                </h3>
             </div>
 
-            <div class="media-container" id="content-1922">
+            <div class="timeline-desc" id="timeline-desc-1">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem, dicta officia alias provident aut. 
-                    Labore omnis totam quae provident placeat iusto est culpa nam. Pariatur culpa a eius nulla?
+                    Isaac Newton publishes a book explaining how objects move and how gravity works. 
+                    His ideas can describe everything from falling apples to the motion of planets. 
+                    They shape science and engineering for hundreds of years.
                 </p>
             </div>
 
-            <div class="media-container" id="content-1952">
+            <div class="timeline-desc" id="timeline-desc-2">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem, dicta officia alias provident aut. 
-                    Labore omnis totam quae provident placeat iusto est culpa nam. Pariatur culpa a eius nulla?
+                    James Clerk Maxwell shows that electricity, magnetism, and light are closely connected. 
+                    His work reveals that light is a type of wave. 
+                    This understanding later leads to radio, television, and wireless communication.
                 </p>
             </div>
 
-            <div class="media-container" id="content-1956">
+            <div class="timeline-desc" id="timeline-desc-3">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem, dicta officia alias provident aut. 
-                    Labore omnis totam quae provident placeat iusto est culpa nam. Pariatur culpa a eius nulla?
+                    J. J. Thomson discovers the electron, a tiny particle inside atoms. 
+                    This proves that atoms are made of smaller parts. 
+                    It changes how scientists understand matter.
                 </p>
             </div>
 
-            <div class="media-container" id="content-1964">
+            <div class="timeline-desc" id="timeline-desc-4">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem, dicta officia alias provident aut. 
-                    Labore omnis totam quae provident placeat iusto est culpa nam. Pariatur culpa a eius nulla?
+                    Max Planck introduces a new idea: energy is released in small packets instead of continuously. 
+                    This surprising result does not fit classical physics. 
+                    It opens the door to a new way of understanding the microscopic world.
                 </p>
             </div>
 
-            <div class="media-container" id="content-1971">
+            <div class="timeline-desc" id="timeline-desc-5">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem, dicta officia alias provident aut. 
-                    Labore omnis totam quae provident placeat iusto est culpa nam. Pariatur culpa a eius nulla?
+                    Albert Einstein shows that space and time are not absolute but depend on motion. 
+                    He also explains that nothing can move faster than light. 
+                    These ideas completely change how we think about the universe.
                 </p>
             </div>
 
-            <div class="media-container" id="content-1980">
+            <div class="timeline-desc" id="timeline-desc-6">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem, dicta officia alias provident aut. 
-                    Labore omnis totam quae provident placeat iusto est culpa nam. Pariatur culpa a eius nulla?
+                    Ernest Rutherford finds that atoms have a small, dense center called the nucleus. 
+                    Most of the atom is actually empty space. 
+                    This discovery reshapes atomic science.
                 </p>
             </div>
 
-            <div class="media-container" id="content-1991">
+            <div class="timeline-desc" id="timeline-desc-7">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem, dicta officia alias provident aut. 
-                    Labore omnis totam quae provident placeat iusto est culpa nam. Pariatur culpa a eius nulla?
+                    Scientists develop a new theory to describe the behavior of atoms and particles. 
+                    This theory explains why matter behaves differently on very small scales. 
+                    It becomes essential for chemistry, electronics, and modern technology.
                 </p>
             </div>
 
-            <div class="media-container" id="content-1994">
+            <div class="timeline-desc" id="timeline-desc-8">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem, dicta officia alias provident aut. 
-                    Labore omnis totam quae provident placeat iusto est culpa nam. Pariatur culpa a eius nulla? 
+                    Researchers at CERN discover a long-predicted particle called the Higgs boson. 
+                    It helps explain why particles have mass. 
+                    This discovery confirms an important part of modern physics. 
                 </p>
             </div>
 
-            <h2 id="content-end">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam voluptatem, dicta officia alias provident aut. 
-                Labore omnis totam quae provident placeat iusto est culpa nam. Pariatur culpa a eius nulla?
+            <h2 id="timeline-desc-9">
+                These events represent just a few key moments in the history of physics. 
+                Research continues to push our understanding of the universe forward. 
+                Future discoveries will keep shaping how we see the world.  
             </h2>
         </section>
 
