Adjust class- and id-names to be consistent

--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -8,16 +8,14 @@
     <title>Newton's Apple</title>
 </head>
 <body>
-    <nav id="myNav" class="overlay">
-        <div class="overlay-content">
+    <nav id="nav-mobile">
+        <div id="nav-mobile-links">
             <a href="../index.html">Home</a>
             <a href="./history.html">History</a>
             <a href="./pendulum.html">Pendulum</a>
             <a href="./quiz.html">Quiz</a>
         </div>
     </nav>
-
-    <button onclick="topFunction()" id="myBtn" title="Go to top">&#11165;</button>
 
     <div class="grid-container">
 
