--- a/Pages/pendulum.html
+++ b/Pages/pendulum.html
@@ -8,8 +8,8 @@
     <title>The Pendulum</title>
 </head>
 <body>
-    <nav id="myNav" class="overlay">
-        <div class="overlay-content">
+    <nav id="nav-mobile">
+        <div id="nav-mobile-links">
             <a href="../index.html">Home</a>
             <a href="./history.html">History</a>
             <a href="./gravity.html">Gravity</a>
@@ -25,7 +25,7 @@
                 <a href="./history.html" class="highlight-text">History</a>
             </div>
 
-            <div class="headline" id="keyboard-page-headline">
+            <div class="headline" id="pendulum-page-headline">
                 <div>
                     <div class="headline-highlight">The Pendulum</div>
                 </div>
