--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -8,8 +8,8 @@
     <title>Test Your Knowledge</title>
 </head>
 <body>
-    <nav id="myNav" class="overlay">
-        <div class="overlay-content">
+    <nav id="nav-mobile">
+        <div id="nav-mobile-links">
             <a href="../index.html">Home</a>
             <a href="./history.html">History</a>
             <a href="./gravity.html">Gravity</a>
