--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Styles/style.css">
     <script defer src="./Scripts/script.js" type="text/javascript"></script>
-    <title>Physics Escape Room</title>
+    <title>PhysiXplore</title>
 </head>
 <body>
-    <nav id="myNav" class="overlay">
-        <div class="overlay-content">
+    <nav id="nav-mobile">
+        <div id="nav-mobile-links">
             <a href="./Pages/history.html">History</a>
             <a href="./Pages/gravity.html">Gravity</a>
             <a href="./Pages/pendulum.html">Pendulum</a>
@@ -54,33 +54,33 @@
             <button class="burger-button" type="button">&#9776;</button>
         </div>
 
-        <section id="slideshow-container">
-            <div class="mySlides fade">
-                <div class="slide-container" id="history-page-link">
+        <section id="gallery-container">
+            <div class="gallery-item">
+                <div class="gallery-page" id="gallery-history-page">
                     <a href="./Pages/history.html" class="page-link" id="test">Read about key<br>
-                            Physical Events
+                        Physical Events
                     </a>
                 </div>
             </div>
 
-            <div class="mySlides fade">
-                <div class="slide-container" id="gravity-page-link">
+            <div class="gallery-item">
+                <div class="gallery-page" id="gallery-gravity-page">
                     <a href="./Pages/gravity.html" class="page-link">Newton's<br>
                         Gravitational Law
                     </a>
                 </div>
             </div>
 
-            <div class="mySlides fade">
-                <div class="slide-container" id="resonance-page-link">
-                    <a href="./Pages/resonance.html" class="page-link">Shattering glass<br>
-                        with sound
+            <div class="gallery-item">
+                <div class="gallery-page" id="gallery-pendulum-page">
+                    <a href="./Pages/pendulum.html" class="page-link">The Pendulum<br>
+                        in Motion
                     </a>
                 </div>
             </div>
 
-            <div class="mySlides fade">
-                <div class="slide-container" id="quiz-page-link">
+            <div class="gallery-item">
+                <div class="gallery-page" id="gallery-quiz-page">
                     <a href="./Pages/quiz.html" class="page-link">Test Your<br>
                         Knowledge
                     </a>
