Add cross page reference links

--- a/Pages/history.html
+++ b/Pages/history.html
@@ -101,8 +101,8 @@
 
             <div class="timeline-desc" id="timeline-desc-1">
                 <p>
-                    Isaac Newton publishes a book explaining how objects move and how gravity works. 
-                    His ideas can describe everything from falling apples to the motion of planets. 
+                    Isaac Newton publishes a book explaining how <a href="./pendulum.html" class="cross-page-ref">objects move</a> and how gravity works. 
+                    His ideas can describe everything from <a href="./gravity.html" class="cross-page-ref">falling apples</a> to the motion of planets. 
                     They shape science and engineering for hundreds of years.
                 </p>
             </div>
