--- a/Pages/pendulum.html
+++ b/Pages/pendulum.html
@@ -45,38 +45,43 @@
 
             <div class="pendulum-text" id="pendulum-text-1">
                 <h2 class="pendulum-text-title" id="pendulum-text-title-1">The Simple Pendulum</h2>
-                <p class="pendulum-text-desc" id="pendulum-text-desc-1">
-                    A pendulum is one of the simplest and most fascinating systems in physics. 
-                    It consists of a small mass (called the bob) attached to a string or rod that is fixed at one end. 
-                    When the pendulum is displaced from its resting position and released, it swings back and forth in a regular motion known as oscillation.
-                    Although it is very simple, it is surprisingly engaging to watch and experiment with.
-                </p>
+                <div class="pendulum-text-desc-ctn" id="pendulum-text-desc-1-ctn">
+                    <p class="pendulum-text-desc" id="pendulum-text-desc-1">
+                        A pendulum is one of the simplest and most fascinating systems in physics. 
+                        It consists of a small mass (called the bob) attached to a string or rod that is fixed at one end. 
+                        When the pendulum is displaced from its resting position and released, it swings back and forth in a regular motion known as oscillation.
+                        Although it is very simple, it is surprisingly engaging to watch and experiment with.
+                    </p>
+                </div>
             </div>
 
             <div class="pendulum-text" id="pendulum-text-2">
                 <h2 class="pendulum-text-title" id="pendulum-text-title-2">How Does a Pendulum Move?</h2>
-                <p class="pendulum-text-desc" id="pendulum-text-desc-2">
-                    The motion of a pendulum is caused by gravity. 
-                    When the bob is pulled to one side, gravitational force accelerates it toward the lowest point of its path. 
-                    As it passes this point, it continues moving due to its inertia, slowing down until gravity pulls it back again. 
-                    This repeating motion continues until energy is lost due to air resistance and friction.
-                </p>
+                <div class="pendulum-text-desc-ctn" id="pendulum-text-desc-2-ctn">
+                    <p class="pendulum-text-desc" id="pendulum-text-desc-2">
+                        The motion of a pendulum is caused by <a href="./gravity.html" class="cross-page-ref">gravity</a>. 
+                        When the bob is pulled to one side, gravitational force accelerates it toward the lowest point of its path. 
+                        As it passes this point, it continues moving due to its inertia, slowing down until gravity pulls it back again. 
+                        This repeating motion continues until energy is lost due to air resistance and friction.
+                    </p>
+                </div>
             </div>
 
             <div class="pendulum-text" id="pendulum-text-3">
                 <h2 class="pendulum-text-title" id="pendulum-text-title-3">Why Are Pendulums Important?</h2>
-                <p class="pendulum-text-desc" id="pendulum-text-desc-3">
-                    Pendulums have played a key role in the history of science. 
-                    They were used in early clocks, helped scientists understand oscillatory motion, and are still used today in seismology, engineering, and physics education.
-                    Use the interactive pendulum demo on this page to explore how changing the length or starting angle affects the motion of the pendulum.
-                </p>
+                <div class="pendulum-text-desc-ctn" id="pendulum-text-desc-3-ctn">
+                    <p class="pendulum-text-desc" id="pendulum-text-desc-3">
+                        Pendulums have played a key role in the <a href="./history.html" class="cross-page-ref">history</a> of science. 
+                        They were used in early clocks, helped scientists understand oscillatory motion, and are still used today in seismology, engineering, and physics education.
+                        Use the interactive pendulum demo on this page to explore how changing the length or starting angle affects the motion of the pendulum.
+                    </p>
+                </div>
             </div>
 
             <div id="pendulum-wrapper">
                 <div id="pendulum-test">
                     <div id="pendulum-container">
                         <svg id="pendulum-svg" viewBox="0 0 200 200">
-                            <!-- <rect class="pivot" x="100" y="20" width="20" height="10" rx="2"/> -->
                             <circle class="pivot" cx="100" cy="25" r="3"/>
                             
                             <line id="rod" class="pendulum-rod" x1="100" y1="25" x2="100" y2="165"/>
