Add content and style to Gravity page

--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -44,6 +44,44 @@
 
         <section class="grid-item-main" id="gravity-page-main">
             
+            <div class="gravity-text" id="gravity-text-1">
+                <h2>Force of Gravity</h2>
+                <hr>
+                <br>
+                <p>
+                    Gravity ensures that all bodies are attracted to the Earth.
+                    If an object is no longer held, it falls down.
+                    Newton described gravity as a force that attracts masses. This principle explains falling objects and also the <a href="./pendulum.html" class="cross-page-ref">motion</a> of the Moon and planets.
+                    The greater the mass of an object, the stronger its gravitational pull. This is why the Earth can hold us on its surface, while smaller objects cannot. Gravity acts everywhere in the universe. It keeps planets in their orbits and causes objects
+                    to fall toward the ground when they are released.
+                    Near the surface of the Earth, the gravitational acceleration is about <mark id="gravity-value">..................</mark> meters per second squared.
+                </p>
+            </div>
+
+            <div id="picture-Newton">
+                <img src="../Images/1546636880.svg" alt="Isaac Newton" title="Isaac Newton">
+            </div>
+
+            <div class="gravity-formula" id="gravity-formula-1">
+                <h2>Newton's law of gravitation:</h2>
+                <hr>
+                <p>
+                    <em>F</em> =
+                    G · m<sub>1</sub> · m<sub>2</sub>/r<sup>2</sup>
+                </p>
+                <p>
+                    In this formula, <i>F</i> is the gravitational force, <em>m<sub>1</sub></em> and <em>m<sub>2</sub></em> are the masses of two objects, <em>r</em> is the distance between them, and <em>G</em> is a constant value.
+                </p>
+            </div>
+
+            <div class="apple-tree" id="apple-tree1">
+                <h2>Click the apple to fill in the gap!</h2>
+                <div class="tree-wrapper">
+                    <img src="../Images/baum.png" alt="Tree" class="tree">
+                    <img src="../Images/apfel.png" alt="Apple" class="apple" id="apple">
+                </div>
+            </div>
+
         </section>
     </div>
 </body>
