Add content, style and script to Quiz page

--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../Styles/style.css">
     <script defer src="../Scripts/quiz.js"></script>
     <title>Test Your Knowledge</title>
+    <meta name="description" content="Test your physics knowledge with an interactive quiz about the key history milestones of physics, gravity, pendulum. Perfect for students and beginners.">
+    <meta name="keywords" content="physics quiz, Newton, gravity, gravitation, Isaac Newton, pendulum, science quiz, physics learning">
 </head>
 <body>
     <nav id="nav-mobile">
@@ -43,7 +45,6 @@
 
         <section class="grid-item-main" id="quiz-page-main">
 
-            <h1><span class="text-metal">Physics</span> Quiz!</h1>
             <div class="quiz">
                 <h2 id="question">Question goes here</h2>
                 <div id="answer-buttons">
@@ -54,6 +55,7 @@
                 </div>
                 <button id="next-btn">Next</button>
             </div>
+            
         </section>
         
     </div>
