Restructure element hierarchy in gallery-container
Add html img tags instead of css background-images for better accessibility

--- a/index.html
+++ b/index.html
@@ -56,35 +56,23 @@
 
         <section id="gallery-container">
             <div class="gallery-item">
-                <div class="gallery-page" id="gallery-history-page">
-                    <a href="./Pages/history.html" class="page-link" id="test">Read about key<br>
-                        Physical Events
-                    </a>
-                </div>
+                <img src="./Images/sun-earth-moon-geometry.svg" class="gallery-item-img" id="gallery-history-page">
+                <a href="./Pages/history.html" class="gallery-page-link" id="test">Read about key<br>Physical Events</a>
             </div>
 
             <div class="gallery-item">
-                <div class="gallery-page" id="gallery-gravity-page">
-                    <a href="./Pages/gravity.html" class="page-link">Newton's<br>
-                        Gravitational Law
-                    </a>
-                </div>
+                <img src="./Images/isaac-newton-physicist-portrait.svg" class="gallery-item-img" id="gallery-gravity-page">
+                <a href="./Pages/gravity.html" class="gallery-page-link">Newton's<br>Gravitational Law</a>
             </div>
 
             <div class="gallery-item">
-                <div class="gallery-page" id="gallery-pendulum-page">
-                    <a href="./Pages/pendulum.html" class="page-link">The Pendulum<br>
-                        in Motion
-                    </a>
-                </div>
+                <img src="./Images/pendulum-mechanical-clock-physics.svg" class="gallery-item-img" id="gallery-pendulum-page">
+                <a href="./Pages/pendulum.html" class="gallery-page-link">The Pendulum<br>in Motion</a>
             </div>
 
             <div class="gallery-item">
-                <div class="gallery-page" id="gallery-quiz-page">
-                    <a href="./Pages/quiz.html" class="page-link">Test Your<br>
-                        Knowledge
-                    </a>
-                </div>
+                <img src="./Images/math-formulas-sketch-handwritten.svg" class="gallery-item-img" id="gallery-quiz-page">
+                <a href="./Pages/quiz.html" class="gallery-page-link">Test Your<br>Knowledge</a>
             </div>
         </section>
     </div>   
