Make slideshow automatic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div id="main-page">
 
-        <div class="button-container" id="next-button-container">
+        <!-- <div class="button-container" id="next-button-container">
             <button type="button" id="next">&#10095;</button>
         </div>
         <div class="button-container" id="prev-button-container">
@@ -30,7 +30,7 @@
             <span class="dot" id="slide2"></span>
             <span class="dot" id="slide3"></span>
             <span class="dot" id="slide4"></span>
-        </div>
+        </div> -->
 
         <header class="header"> <!--<div>class test-header-->
             <div class="nav-box" id="nav-box-left">
