--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles/style.css">
     <script defer src="../Scripts/gravity.js" type="text/javascript"></script>
-    <title>Newton's Apple</title>
+    <title>Newton's Apple – Gravity explained simply | Interactive physics</title>
+    <meta name="description" content="Interactive website about Newton’s law of gravitation. Learn physics with explanations, formulas, images, and a quiz.">
+    <meta name="keywords" content="Newton, gravity, gravitation, physics, Isaac Newton, force of gravity, pendulum, physics learning">
+    <meta name="author" content="Newton's Apple">
 </head>
 <body>
     <nav id="nav-mobile">
@@ -59,7 +62,7 @@
             </div>
 
             <div id="picture-Newton">
-                <img src="../Images/1546636880.svg" alt="Isaac Newton" title="Isaac Newton">
+                <img src="../Images/isaac-newton-physicist-portrait.svg" alt="Isaac Newton portrait engraving with curly wig">
             </div>
 
             <div class="gravity-formula" id="gravity-formula-1">
@@ -77,8 +80,8 @@
             <div class="apple-tree" id="apple-tree1">
                 <h2>Click the apple to fill in the gap!</h2>
                 <div class="tree-wrapper">
-                    <img src="../Images/baum.png" alt="Tree" class="tree">
-                    <img src="../Images/apfel.png" alt="Apple" class="apple" id="apple">
+                    <img src="../Images/green-tree-cartoon-icon.png" alt="green tree with brown trunk" class="tree">
+                    <img src="../Images/red-apple-fruit-icon.png" alt="red apple with green leaf" class="apple" id="apple">
                 </div>
             </div>
 
