Replace divs with semantic HTML elements

--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -23,21 +23,21 @@
     <div class="grid-container">
 
         <header class="header">
-            <div class="nav-box" id="nav-box-left">
+            <nav class="nav-box" id="nav-box-left">
                 <a href="../index.html" class="highlight-text">Home</a>
                 <a href="./history.html" class="highlight-text">History</a>
-            </div>
+            </nav>
 
             <div class="headline" id="gravity-page-headline">
                 <div>
-                    <div class="headline-highlight">Newton's Apple</div>
+                    <h1 class="headline-highlight">Newton's Apple</h1>
                 </div>
             </div>
 
-            <div class="nav-box" id="nav-box-right">
+            <nav class="nav-box" id="nav-box-right">
                 <a href="./pendulum.html" class="highlight-text">Pendulum</a>
                 <a href="./quiz.html" class="highlight-text">Quiz</a>
-            </div>
+            </nav>
         </header>
 
         <div class="burger-button-container">
@@ -45,12 +45,10 @@
         </div>
 
 
-        <section class="grid-item-main" id="gravity-page-main">
+        <main class="grid-item-main" id="gravity-page-main">
             
-            <div class="gravity-text" id="gravity-text-1">
+            <section class="gravity-text" id="gravity-text-1">
                 <h2>Force of Gravity</h2>
-                <hr>
-                <br>
                 <p>
                     Gravity ensures that all bodies are attracted to the Earth.
                     If an object is no longer held, it falls down.
@@ -59,15 +57,14 @@
                     to fall toward the ground when they are released.
                     Near the surface of the Earth, the gravitational acceleration is about <mark id="gravity-value">..................</mark> meters per second squared.
                 </p>
-            </div>
+            </section>
 
             <div id="picture-Newton">
                 <img src="../Images/isaac-newton-physicist-portrait.svg" alt="Isaac Newton portrait engraving with curly wig">
             </div>
 
-            <div class="gravity-formula" id="gravity-formula-1">
+            <section class="gravity-formula" id="gravity-formula-1">
                 <h2>Newton's law of gravitation:</h2>
-                <hr>
                 <p>
                     <em>F</em> =
                     G · m<sub>1</sub> · m<sub>2</sub>/r<sup>2</sup>
@@ -75,17 +72,17 @@
                 <p>
                     In this formula, <i>F</i> is the gravitational force, <em>m<sub>1</sub></em> and <em>m<sub>2</sub></em> are the masses of two objects, <em>r</em> is the distance between them, and <em>G</em> is a constant value.
                 </p>
-            </div>
+            </section>
 
-            <div class="apple-tree" id="apple-tree1">
+            <section class="apple-tree" id="apple-tree1">
                 <h2>Click the apple to fill in the gap!</h2>
                 <div class="tree-wrapper">
                     <img src="../Images/green-tree-cartoon-icon.png" alt="green tree with brown trunk" class="tree">
                     <img src="../Images/red-apple-fruit-icon.png" alt="red apple with green leaf" class="apple" id="apple">
                 </div>
-            </div>
+            </section>
 
-        </section>
+        </main>
     </div>
 </body>
 </html>
