--- a/Pages/pendulum.html
+++ b/Pages/pendulum.html
@@ -20,30 +20,30 @@
     <div class="grid-container">
 
         <header class="header">
-            <div class="nav-box" id="nav-box-left">
+            <nav class="nav-box" id="nav-box-left">
                 <a href="../index.html" class="highlight-text">Home</a>
                 <a href="./history.html" class="highlight-text">History</a>
-            </div>
+            </nav>
 
             <div class="headline" id="pendulum-page-headline">
                 <div>
-                    <div class="headline-highlight">The Pendulum</div>
+                    <h1 class="headline-highlight">The Pendulum</h1>
                 </div>
             </div>
 
-            <div class="nav-box" id="nav-box-right">
+            <nav class="nav-box" id="nav-box-right">
                 <a href="./gravity.html" class="highlight-text">Gravity</a>
                 <a href="./quiz.html" class="highlight-text">Quiz</a>
-            </div>
+            </nav>
         </header>
 
         <div class="burger-button-container">
             <button class="burger-button" type="button">&#9776;</button>
         </div>
 
-        <section class="grid-item-main" id="pendulum-page-main">
+        <main class="grid-item-main" id="pendulum-page-main">
 
-            <div class="pendulum-text" id="pendulum-text-1">
+            <section class="pendulum-text" id="pendulum-text-1">
                 <h2 class="pendulum-text-title" id="pendulum-text-title-1">The Simple Pendulum</h2>
                 <div class="pendulum-text-desc-ctn" id="pendulum-text-desc-1-ctn">
                     <p class="pendulum-text-desc" id="pendulum-text-desc-1">
@@ -53,9 +53,9 @@
                         Although it is very simple, it is surprisingly engaging to watch and experiment with.
                     </p>
                 </div>
-            </div>
+            </section>
 
-            <div class="pendulum-text" id="pendulum-text-2">
+            <section class="pendulum-text" id="pendulum-text-2">
                 <h2 class="pendulum-text-title" id="pendulum-text-title-2">How Does a Pendulum Move?</h2>
                 <div class="pendulum-text-desc-ctn" id="pendulum-text-desc-2-ctn">
                     <p class="pendulum-text-desc" id="pendulum-text-desc-2">
@@ -65,9 +65,9 @@
                         This repeating motion continues until energy is lost due to air resistance and friction.
                     </p>
                 </div>
-            </div>
+            </section>
 
-            <div class="pendulum-text" id="pendulum-text-3">
+            <section class="pendulum-text" id="pendulum-text-3">
                 <h2 class="pendulum-text-title" id="pendulum-text-title-3">Why Are Pendulums Important?</h2>
                 <div class="pendulum-text-desc-ctn" id="pendulum-text-desc-3-ctn">
                     <p class="pendulum-text-desc" id="pendulum-text-desc-3">
@@ -76,9 +76,9 @@
                         Use the interactive pendulum demo on this page to explore how changing the length or starting angle affects the motion of the pendulum.
                     </p>
                 </div>
-            </div>
+            </section>
 
-            <div id="pendulum-wrapper">
+            <section id="pendulum-wrapper">
                 <div id="pendulum-test">
                     <div id="pendulum-container">
                         <svg id="pendulum-svg" viewBox="0 0 200 200">
@@ -107,9 +107,9 @@
                     <button class="pendulum-control-button" id="startBtn">▶ Start</button>
                     <button class="pendulum-control-button" id="resetBtn">↺ Reset</button>
                 </div>
-            </div>
+            </section>
 
-        </section>
+        </main>
 
     </div>
 </body>
