--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -22,30 +22,30 @@
     <div class="grid-container">
 
         <header class="header">
-            <div class="nav-box" id="nav-box-left">
+            <nav class="nav-box" id="nav-box-left">
                 <a href="../index.html" class="highlight-text">Home</a>
                 <a href="./history.html" class="highlight-text">History</a>
-            </div>
+            </nav>
 
             <div class="headline" id="quiz-page-headline">
                 <div>
-                    <div class="headline-highlight">Physics Quiz</div>
+                    <h1 class="headline-highlight">Physics Quiz</h1>
                 </div>
             </div>
 
-            <div class="nav-box" id="nav-box-right">
+            <nav class="nav-box" id="nav-box-right">
                 <a href="./gravity.html" class="highlight-text">Gravity</a>
                 <a href="./pendulum.html" class="highlight-text">Pendulum</a>
-            </div>
+            </nav>
         </header>
 
         <div class="burger-button-container">
             <button class="burger-button" type="button">&#9776;</button>
         </div>
 
-        <section class="grid-item-main" id="quiz-page-main">
+        <main class="grid-item-main" id="quiz-page-main">
 
-            <div class="quiz">
+            <section class="quiz">
                 <h2 id="question">Question goes here</h2>
                 <div id="answer-buttons">
                     <button class="btn">Answer 1</button>
@@ -54,9 +54,9 @@
                     <button class="btn">Answer 4</button>
                 </div>
                 <button id="next-btn">Next</button>
-            </div>
+            </section>
             
-        </section>
+        </main>
         
     </div>
 </body>
