--- a/index.html
+++ b/index.html
@@ -19,42 +19,29 @@
 
     <div id="main-page">
 
-        <!-- <div class="button-container" id="next-button-container">
-            <button type="button" id="next">&#10095;</button>
-        </div>
-        <div class="button-container" id="prev-button-container">
-            <button type="button" id="prev">&#10094;</button>
-        </div>
-        <div id="dots-container">
-            <span class="dot" id="slide1"></span>
-            <span class="dot" id="slide2"></span>
-            <span class="dot" id="slide3"></span>
-            <span class="dot" id="slide4"></span>
-        </div> -->
-
-        <header class="header"> <!--<div>class test-header-->
-            <div class="nav-box" id="nav-box-left">
+        <header class="header">
+            <nav class="nav-box" id="nav-box-left">
                 <a href="./Pages/history.html" class="highlight-text">History</a>
                 <a href="./Pages/gravity.html" class="highlight-text">Gravity</a>
-            </div>
+            </nav>
 
-            <div class="headline" id="main-page-headline"> <!--<header>class header id main-page-header-->
+            <div class="headline" id="main-page-headline">
                 <div>
-                    <div class="headline-highlight">PhysiXplore</div>
+                    <h1 class="headline-highlight">PhysiXplore</h1>
                 </div>    
             </div>
 
-            <div class="nav-box" id="nav-box-right">
+            <nav class="nav-box" id="nav-box-right">
                 <a href="./Pages/pendulum.html" class="highlight-text">Pendulum</a>
                 <a href="./Pages/quiz.html" class="highlight-text">Quiz</a>
-            </div>
+            </nav>
         </header>
 
         <div class="burger-button-container">
             <button class="burger-button" type="button">&#9776;</button>
         </div>
 
-        <section id="gallery-container">
+        <main id="gallery-container">
             <div class="gallery-item">
                 <img src="./Images/sun-earth-moon-geometry.svg" class="gallery-item-img" id="gallery-history-page">
                 <a href="./Pages/history.html" class="gallery-page-link" id="test">Read about key<br>Physical Events</a>
@@ -74,7 +61,7 @@
                 <img src="./Images/math-formulas-sketch-handwritten.svg" class="gallery-item-img" id="gallery-quiz-page">
                 <a href="./Pages/quiz.html" class="gallery-page-link">Test Your<br>Knowledge</a>
             </div>
-        </section>
+        </main>
     </div>   
 </body>
 </html>
