--- a/Pages/pendulum.html
+++ b/Pages/pendulum.html
@@ -93,13 +93,13 @@
                     <div class="pendulum-control-group">
                         <label class="pendulum-control-label" for="length">Pendulum length</label>
                         <input type="range" id="length" min="50" max="90" value="50" step="5">
-                        <div class="value-display" id="length-display">50 cm</div>
+                        <output class="value-display" id="length-display" for="length">50 cm</output>
                     </div>
 
                     <div class="pendulum-control-group">
                         <label class="pendulum-control-label" for="angle">Starting angle</label>
                         <input type="range" id="angle" min="10" max="60" value="30" step="5">
-                        <div class="value-display" id="angle-display">30°</div>
+                        <output class="value-display" id="angle-display" for="angle">30°</output>
                     </div>
 
                     <button class="pendulum-control-button" id="startBtn">▶ Start</button>
