Centralize mobile Nav function in dedicated script

--- a/Pages/gravity.html
+++ b/Pages/gravity.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles/style.css">
     <script defer src="../Scripts/gravity.js" type="text/javascript"></script>
+    <script defer src="../Scripts/mobileNav.js"></script>
     <title>Newton's Apple – Gravity explained simply | Interactive physics</title>
     <meta name="description" content="Interactive website about Newton’s law of gravitation. Learn physics with explanations, formulas, images, and a quiz.">
     <meta name="keywords" content="Newton, gravity, gravitation, physics, Isaac Newton, force of gravity, pendulum, physics learning">
