--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles/style.css">
     <script defer src="../Scripts/quiz.js"></script>
+    <script defer src="../Scripts/mobileNav.js"></script>
     <title>Test Your Knowledge</title>
     <meta name="description" content="Test your physics knowledge with an interactive quiz about the key history milestones of physics, gravity, pendulum. Perfect for students and beginners.">
     <meta name="keywords" content="physics quiz, Newton, gravity, gravitation, Isaac Newton, pendulum, science quiz, physics learning">
