--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Styles/style.css">
     <script defer src="./Scripts/script.js" type="text/javascript"></script>
+    <script defer src="./Scripts/mobileNav.js" type="text/javascript"></script>
     <title>PhysiXplore</title>
 </head>
 <body>
