--- a/Pages/history.html
+++ b/Pages/history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles/style.css">
-    <script defer src="../Scripts/history.js" type="text/javascript"></script>
+    <script defer src="../Scripts/mobileNav.js"></script>
     <title>Physics History</title>
 </head>
 <body>
