--- a/Pages/pendulum.html
+++ b/Pages/pendulum.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles/style.css">
     <script defer src="../Scripts/pendulum.js"></script>
+    <script defer src="../Scripts/mobileNav.js"></script>
     <title>The Pendulum</title>
 </head>
 <body>
